<resources>
    <string name="app_name">Smart IR Hub</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="app_logo">App logo</string>
    <string name="welcome_desc">Sign in with Google or your email address to get started.</string>
    <string name="welcomeTitle">Welcome!</string>
    <string name="remind_verify_email">Don\'t forget to verify your email by clicking the link in the email sent to
    </string>
    <string name="client_id" translatable="false">
        152988922698-8oq2ogokh7khth08q9h2mtodgmb6k8bg.apps.googleusercontent.com
    </string>
    <string name="verify_email">Verify Email Address</string>
    <string name="resend_verification_email">Resend Verification Email</string>
    <string name="err_sign_in_title">Problem Signing In</string>
    <string name="err_sign_in_google_desc">There was a problem signing in with Google. Please try again.</string>
    <string name="or">or</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="skip_sign_in">Skip</string>
    <string name="almost_done">Almost Done!</string>
    <string name="pick_username">Pick a username and you\'re good to go.</string>
    <string name="err_invalid_email">Invalid email address</string>
    <string name="err_pass">Must be between 5 – 50 characters, one lower case, one upper case, and one number</string>
    <string name="finish_sign_up">Finish Sign Up</string>
    <string name="err_invalid_username">Must be between 5 – 15 characters and contain no special characters</string>
    <string name="err_account_made_title">Existing Account Found</string>
    <string name="err_acount_made_desc">An account was already made with that email address. Try signing in
        instead!
    </string>
    <string name="err_sign_in_desc">Something went wrong. Please try again! If the problem persists please send us a bug
        report.
    </string>
    <string name="dismiss">Dismiss</string>
    <string name="report_issue">Report Issue</string>
    <string name="err_inv_email_pass">Invalid Email or Password</string>
    <string name="err_inv_email_pass_desc">The email and password combination was not valid. Please try again.</string>
    <string name="err_email_nonexistant">Account Not Found</string>
    <string name="err_email_nonexistant_desc">No account with that email account was found. Try signing up instead.
    </string>
    <string name="username_taken_title">Username Already Taken</string>
    <string name="err_username_taken_desc">An account with that username already exists. Please select a different one
        and try again.
    </string>
    <string name="username">Username</string>
    <string name="title_remotes">My Remotes</string>
    <string name="title_actions">Actions</string>
    <string name="passwordConfirm">Confirm Password</string>
    <string name="error">Error</string>
    <string name="err_no_internet">Something went wrong. Check your internet connection and try again. If the problem
        persists, please report this issue.
    </string>
    <string name="welcome_sign_up">Enter an your email address and pick a password below.</string>
    <string name="welcome_sign_in">Enter your email address and password below.</string>
    <string name="err_pass_match">Passwords do not match</string>
    <string name="choose_username">Choose Username</string>
    <string name="title_activity_main_view">MainViewActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="create_remote">New Remote</string>
    <string name="remote_name">Remote Name:</string>
    <string name="pick_button_name">Name your new button</string>
    <string name="choose_ir_action">Choose an IR signal / action</string>
    <string name="pick_button_style">Pick a button style</string>
    <string name="pick_name">Pick Name</string>
    <string name="choose_action">Choose Action</string>
    <string name="pick_style">Pick Style</string>
    <string name="add_button">Add Button</string>
    <string name="wrn_create_button_desc">By going back, your progress will be lost.</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="stay">stay</string>
    <string name="go_back">Go back</string>
    <string name="need_help_with_a_name">Need Help With a Name?</string>
    <string name="need_help_name_desc">Try describing what the button does in 1 - 3 words. For example: If the button
        increases the volume of a TV, try naming it VOL UP.
    </string>
    <string name="need_help_name_ls_desc">Try describing what the button does in 1 - 3 words. For example: If the button
        increases the volume of a TV, try naming it VOL UP.
    </string>
    <string name="rememberTitle">Remember:</string>
    <string name="pick_a_button_name">Pick a Button Name</string>
    <string name="choose_a_button_action">Choose a button action</string>
    <string name="pick_a_button_style">Pick a button style</string>
    <string name="button_name_hint">Name:</string>
    <string name="how_to_add_button">Add Button:</string>
    <string name="learn_ir_title">Learn IR Signal:</string>
    <string name="select_ir_hub">Select Hub</string>
    <string name="send_ir_signal">Send IR Signal</string>
    <string name="select_ir_hub_desc">Select a hub to listen for a signal</string>
    <string name="send_ir_signal_desc">Send a signal to the hub</string>
    <string name="name_learned_signal_desc">Name the newly learned signal</string>
    <string name="dont_see_hub_title">Don\'t see your hub listed above?</string>
    <string name="dont_see_hub_desc">Make sure the hub is properly set up and ensure the owner has given you permission
        to use it. If you still don\'t see it, try setting the hub up again.
    </string>
    <string name="selected_hub">selected_hub:</string>
    <string name="select_listening_hub_title">Select Listening Hub</string>
    <string name="err_no_hub_selected_title">No Hub Selected</string>
    <string name="err_no_hub_selected_desc">Select a hub from the drop down menu and try again. If you don\'t see any
        hubs listed, ask the owner of a hub to invite you to their group or set a hub up yourself.
    </string>
    <string name="setup_new_hub_drp_dwn">Set Up New Hub…</string>
    <string name="send_signal_title">Send IR Signal</string>
    <string name="begin_learning_title">Tap \"Start Listening\" to begin recording an IR signal</string>
    <string name="tips_title">Tips:</string>
    <string name="start_listening">Start Listening</string>
    <string name="learning_tips_desc">Tap \"Start Listening\", then point your remote at the IR SmartHub and press the
        button you wish to learn.
        After a successful pairing, you can ensure the IR signal was correctly learned by tapping \"Test Signal\". If
        something went wrong, you can try again by tapping the \"Retry\" button.
    </string>
    <string name="learned_signal_info_title">Learned Signal:</string>
    <string name="signal_type_title">Signal Type:</string>
    <string name="show_advanced_info">Show Advanced Info</string>
    <string name="test_signal">Test Signal</string>
    <string name="retry">Retry</string>
    <string name="err_hub_busy_title">Error: Hub Busy</string>
    <string name="err_hub_busy_desc">Your hub is currently busy and can\'t listen right now. This is usually caused by
        somebody else using the hub. Please try again.
    </string>
    <string name="err_title">Error</string>
    <string name="err_overflow_desc">There was a problem reading the IR signal. This usually occurs when the remote
        button is held down too long. Try again by only taping the button you wish to learn.
    </string>
    <string name="err_overflow_title">Error: Malformed Signal (Code: 802)</string>
    <string name="err_timeout_title">Error: Timeout (Code: 801)</string>
    <string name="err_timeout_desc">The hub didn\'t recognize any valid IR signals. Ensure that you selected the correct
        hub and please try again.
    </string>
    <string name="err_unknown_sig_title">Error (Code: 800)</string>
    <string name="err_unknown_sig_desc">Something went wrong while listening for an IR signal. Please try again.
    </string>
    <string name="save">Save</string>
    <string name="help_name_sig_desc">Try describing what the signal does in 1-3 words. \n\nFor example: If this signal
        increases the volume of a TV, try naming it TV VOL UP.
    </string>
    <string name="tips_learn_desc_1">Pick a name that describes what the signal truly does.</string>
    <string name="for_example">For Example:</string>
    <string name="tips_learn_desc_2">Say this signal changes t he input of a receiver to a laptop via HDMI OUT 1.
        Consider the name HDMI OUT 1instead of laptop input.
    </string>
    <string name="learn_remember_desc">Signal names can only contain letters and numbers.</string>
    <string name="signal_name_hint">Signal Name:</string>
    <string name="err_invalid_sig_name_title">Invalid Name For Signal</string>
    <string name="err_invalid_sig_name_desc">The submited input is not a valid name. Signal names can only contain
        letters and numbers. Please try again.
    </string>
    <string name="err_uploading_signal_title">Error Upload IR Signal</string>
    <string name="err_uploading_signal_desc">Something went wrong when trying to save your signal to the cloud. Please
        check your internet and try again.
    </string>
    <string name="sign_in_with_email">Sign In With Email</string>
    <string name="no_account">Don\'t have an account?\nDon\'t want to use Google?</string>
    <string name="sign_up_with_email">Sign Up With Email</string>
    <string name="enter_email_pass_title">Enter your email and password below:</string>
    <string name="choose_pass_title">Enter your email and choose a password:</string>
    <string name="username_title">Select a username. This can be used to share your IR hubs with others.</string>
    <string name="err_no_response_title">Error (No Response)</string>
    <string name="err_no_response_desc">We didn\'t hear anything back from the hub. Check your internet and try again.
    </string>
    <string name="next">Next</string>
    <string name="selected_hub_title">Selected Hub:</string>
    <string name="signal_information">Signal Information:</string>
    <string name="encoding">Encoding:</string>
    <string name="code">Code:</string>
    <string name="raw_data">Raw Data:</string>
    <string name="raw_length">Raw Length:</string>
    <string name="repeat">Repeat:</string>
    <string name="signal_code">Signal Code:</string>
    <string name="raw_data_chunks">Raw Data Chunks:</string>
    <string name="hubs">Hubs:</string>
    <string name="title_my_commands">My Commands</string>
    <string name="title_my_devices">My Devices</string>
    <string name="remember_button_name_desc">Button names will only appear on certain button styles.</string>
    <string name="choose_button_name_title">Choose a Name</string>
</resources>