<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
      app:bbn_rippleColor="#33ffffff"
      app:bbn_alwaysShowLabels="true"
      app:bbn_itemColorActive="@color/colorAccent"
      app:bbn_itemColorInactive="@color/colorPrimary"
      android:background="@color/colorPrimaryDark"
      app:showAsAction="always"
>
    <item
            android:id="@+id/navigation_commands"
            android:icon="@drawable/temp_splash_logo"
            android:title="@string/title_my_commands"
            app:showAsAction="always"
    />
    <item
            android:id="@+id/navigation_main_remote"
            android:icon="@drawable/temp_splash_logo"
            android:title="@string/title_remotes"
            app:showAsAction="always"
    />
    <item
        android:id="@+id/navigation_devices"
        android:icon="@drawable/temp_splash_logo"
        android:title="@string/title_my_devices"
        app:showAsAction="always"
    />

</menu>