<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
    >
        <!-- Toolbar -->
        <com.ms8.smartirhub.android.custom_views.ToolbarCenteredTitle android:id="@+id/toolbar"
                                           android:layout_width="match_parent"
                                           android:layout_height="?attr/actionBarSize"
                                           app:layout_constraintStart_toStartOf="parent"
                                           app:layout_constraintEnd_toEndOf="parent"
                                           app:layout_constraintTop_toTopOf="parent"
                                           app:layout_constraintBottom_toBottomOf="parent"
                                           app:layout_constraintVertical_bias="0"
                                           tools:title="@string/choose_button_name_title"
                                           android:elevation="16dp"
        />
        <TextView
                android:text="@string/need_help_with_a_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvNeedHelpTitle" app:layout_constraintStart_toStartOf="@+id/guideline"
                android:textAppearance="@style/AppTheme.TextAppearance.SplashHeader" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"/>
        <TextView
                android:text="@string/rememberTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvRememberTitle" app:layout_constraintStart_toStartOf="@+id/guideline"
                android:textAppearance="@style/AppTheme.TextAppearance.SplashHeader" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/tvNeedHelpDesc"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintEnd_toStartOf="@+id/guideline3" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/tvNeedHelpNameDesc2"
                app:layout_constraintVertical_bias="1.0"/>
        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content" android:id="@+id/guideline"
                                                    app:layout_constraintGuide_begin="20dp"
                                                    android:orientation="vertical"
                                                    app:layout_constraintStart_toStartOf="parent"
                                                    android:layout_marginStart="16dp"
                                                    app:layout_constraintEnd_toEndOf="parent"
        />
        <TextView
                android:text="@string/need_help_name_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvNeedHelpDesc" app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/tvNeedHelpTitle"
                app:layout_constraintEnd_toStartOf="@+id/guideline3" android:layout_marginTop="4dp"
                app:layout_constraintHorizontal_bias="0.0" android:textColor="@color/white"/>
        <TextView
                android:text="@string/remember_button_name_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvNeedHelpNameDesc2" app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/tvNeedHelpDesc"
                app:layout_constraintEnd_toStartOf="@+id/guideline3" android:layout_marginTop="8dp"
                app:layout_constraintHorizontal_bias="0.0" android:textColor="@color/white"
                android:layout_marginBottom="8dp"
                app:layout_constraintVertical_bias="0.26999998"
                app:layout_constraintBottom_toTopOf="@+id/txtButtonName"/>
        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content" android:id="@+id/guideline3"
                                                    android:orientation="vertical"
                                                    app:layout_constraintGuide_end="16dp"/>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintEnd_toStartOf="@+id/guideline3" android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp" android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toTopOf="@+id/btnPickName" android:id="@+id/txtButtonName"
                android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/toolbar"
                app:layout_constraintVertical_bias="1.0">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/button_name_hint"
                    android:maxLines="1"
                    android:singleLine="true"
            />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
                android:text="@string/pick_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnPickName" android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                android:minWidth="168dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
